syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "BankingService";

package withdrawals;

service Withdrawals {
    rpc CreateWithdrawal(CreateWithdrawalRequest) returns (CreateWithdrawalReply);
    rpc ListWithdrawals(ListWithdrawalsRequest) returns (ListWithdrawalsReply);
}

message CreateWithdrawalRequest {
    int32 user_id = 1;
    string account_number = 2;
    string currency = 3;
    double amount = 4;
    string crypto_address = 5;
}

message CreateWithdrawalReply {
    WithdrawalDto withdrawal = 1;
}

message ListWithdrawalsRequest {
    int32 user_id = 1;
}

message ListWithdrawalsReply {
}

message WithdrawalDto {
    int64 id = 1;
    int32 user_id = 2;
    string account_number = 3;
    string currency = 4;
    double amount = 5;
    string crypto_address = 6;
    string tx_id = 7;
    google.protobuf.Timestamp created_at = 8;
}
